--- a/icon_vault/.obsidian/workspace
+++ b/icon_vault/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "PEOPLE/PEOPLE.md",
+            "file": "TOOLS/Lit_review/zotero/zotero.md",
             "mode": "source",
             "source": false
           }
@@ -85,7 +85,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "PEOPLE/PEOPLE.md",
+                "file": "TOOLS/Lit_review/zotero/zotero.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -102,7 +102,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "PEOPLE/PEOPLE.md"
+                "file": "TOOLS/Lit_review/zotero/zotero.md"
               }
             }
           }
@@ -113,10 +113,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "7d6cd837d17280ff",
+  "active": "ded4f73da43d0f32",
   "lastOpenFiles": [
+    "PLATFORMS/Org_platforms/Advisory Commitee/Advisory Commitee.md",
+    "PLATFORMS/Org_platforms/Board of Directors/Board of Directors.md",
+    "PLATFORMS/Org_platforms/Org_platforms.md",
+    "PRODUCTS/PRODUCTS.md",
+    "PRODUCTS/ICON-Worksheet/ICON-Worksheet.md",
+    "TOOLS/Lit_review/Lit_review.md",
+    "TOOLS/TOOLS.md",
+    "PEOPLE/PEOPLE.md",
     "TOOLS/Workflows/Updating R Without lossing your packages.md",
-    "TOOLS/Workflows/Quarto Websites.md",
-    "TOOLS/Workflows/Running Python in R Studio.md"
+    "TOOLS/Workflows/Quarto Websites.md"
   ]
 }
