--- a/icon_vault/.obsidian/workspace
+++ b/icon_vault/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "7d6cd837d17280ff",
+        "id": "d28612b161ef01a9",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "TOOLS/Lit_review/ICON-Into to special collection.md",
+            "file": "TOOLS/Assets/Text/I-worksheet (continuous script).md",
             "mode": "source",
             "source": false
           }
@@ -85,7 +85,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "TOOLS/Lit_review/ICON-Into to special collection.md",
+                "file": "TOOLS/Assets/Text/I-worksheet (continuous script).md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -102,7 +102,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "TOOLS/Lit_review/ICON-Into to special collection.md"
+                "file": "TOOLS/Assets/Text/I-worksheet (continuous script).md"
               }
             }
           }
@@ -113,17 +113,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "7d6cd837d17280ff",
+  "active": "d28612b161ef01a9",
   "lastOpenFiles": [
+    "TASKS/TASKS.md",
+    "TOOLS/Assets/Text/I-worksheet (continuous script).md",
+    "TOOLS/Assets/Text/ICON Studio Presentation (Script).md",
+    "TOOLS/Assets/Text/Text.md",
+    "TOOLS/Lit_review/ICON-Into to special collection.md",
     "TOOLS/Lit_review/Open Watershed Science by Design.md",
     "TOOLS/Lit_review/zotero/zotero.md",
     "TOOLS/Lit_review/Lit_review.md",
     "PLATFORMS/Org_platforms/Advisory Commitee/Advisory Commitee.md",
-    "PLATFORMS/Org_platforms/Board of Directors/Board of Directors.md",
-    "PLATFORMS/Org_platforms/Org_platforms.md",
-    "PRODUCTS/PRODUCTS.md",
-    "PRODUCTS/ICON-Worksheet/ICON-Worksheet.md",
-    "TOOLS/TOOLS.md",
-    "PEOPLE/PEOPLE.md"
+    "PLATFORMS/Org_platforms/Board of Directors/Board of Directors.md"
   ]
 }
